[workspace]
resolver = "2"
members = [
    "bootstrap",
    "engine",
    "engine/libs/*",
    "engine/modules/*",
    "external-bindings/*",
    "tools/*",
]
default-members = [
    "bootstrap"
]

[workspace.package]
version = "0.0.1"
edition = "2024"

[workspace.dependencies]
arp = { git = "https://github.com/caseif/libarp-rs", rev = "e435b0e", default-features = false }
bindgen = "0.72.1"
bitflags = "2.13.0"
boxdd = "0.4.0"
chrono = "0.4.45"
clap = "4.6.1"
ctrlc = "3.5.2"
dashmap = "7.0.0-rc2"
fragile = "2.1.0"
glsl = "7.0.0"
itertools = "0.15.0"
lazy_static = "1.5.0"
libc = "0.2.186"
linkme = "0.3.36"
lodepng = "3.12.2"
num_enum = "0.7.6"
parking_lot = "0.12.5"
proc-macro2 = "1.0.106"
quote = "1.0.46"
rand = "0.10.1"
rgb = "0.8.53"
rstar = "0.13.0"
sdl3 = { version = "0.18.4", features = ["build-from-source-static"] }
serde = "1.0.228"
serde_json = "1.0.150"
serde_valid = "2.0.3"
spirv-cross2 = "0.7.1"
syn = "2.0.118"
typeid = "1.0.3"
uuid = "1.23.3"
