[package]
name = "lua"
version = "2.28.4"
edition.workspace = true
links = "lua"

[lib]
name = "lua"
crate-type = ["rlib"]

[dependencies]
fragile = { workspace = true }
num_enum = { workspace = true }
num-traits = "0.2.19"
parking_lot = { workspace = true }

[build-dependencies]
bindgen = { workspace = true }
cc = {  version = "1.2.16", features = ["parallel"] }
