[package]
name = "argus_rs"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["rlib", "staticlib"]

[features]
default = []
opengl = ["dep:render_opengl_rust"]

[dependencies]
core_rs = { path = "../../static/core_rs" }
game2d_rs = { path = "../../static/game2d_rs" }
input_rs = { path = "../../static/input_rs" }
render_rs = { path = "../../static/render_rs" }
render_opengl_rust = { path = "../../static/render_opengl_rust", optional = true }
resman_rs = { path = "../../static/resman_rs" }
scripting_rs = { path = "../../static/scripting_rs" }
scripting_lua_rs = { path = "../../static/scripting_lua_rs" }
sound_rs = { path = "../../static/sound_rs" }
ui_rs = { path = "../../static/ui_rs" }
wm_rs = { path = "../../static/wm_rs" }
