[package]
name = "render_rustabi"
version = "0.0.1"
edition = "2021"

[lib]
name = "render_rustabi"
crate-type = ["rlib"]

[dependencies]
libc = "0.2"
num_enum = "0.7"
resman_rustabi = { path = "../resman_rustabi" }
wm_rustabi = { path = "../wm_rustabi" }
core_rustabi = { path = "../core_rustabi" }
lowlevel_rustabi = { path = "../lowlevel_rustabi" }
argus_macros = { path = "../../libs/argus_macros" }
argus_scripting_bind = { path = "../../libs/scripting_bind" }
